--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <!--link rel="stylesheet" href="css/normalize.css"-->
+        <!--link rel="stylesheet" href="css/main.css"-->
+        <link rel="stylesheet" href="css/mhandlon.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -21,17 +22,39 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <header>
+            <h1>mhandlon.com</h1>
+        </header>
 
-        <!-- container for svg/vml root element -->
-        <div id="container"></div>
+        <section>
 
+        <div id="me"></div>
+
+            <div id="desc">
+                <h2>Hi there,</h2>
+                <p>My name is Michael Handlon, and I am a Software Engineer at <a
+                        href="https://www.converlogic.com/web/app_dev.php/converlogic/home">Converlogic</a>.</p>
+                <h2>Why are you here?</h2>
+                <p>This site was established in 2014 as a <a href="http://www.git-scm.com/">git</a> repository, but was deprecated shortly after.</p>
+                <h2>This is not a blog!</h2>
+                <p><a href="http://mhandlon.com/">mhandlon.com</a> remains active as a support measure for legacy code, and an educational tool for peers &amp; associates.
+                    Additional documentation, or reference material may be hosted here on my <a href="http://michaelhandlon.com">website</a> or
+                    <a href="https://github.com/mhandlon">Github</a>.</p>
+                <h2>Move a‘long</h2>
+                <p>There’s really nothing here. Y‘best go back the way you came...</p>
+            </div>
+            <div class="clear"></div>
+        </section>
+        <footer>
+            <p>© 2014-2019 mhandlon.com</p>
+        </footer>
+
+        <script data-main="js/app" src="js/app/me.js"></script>
         <script data-main="js/app" src="js/vendor/require.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+            var _gaq=[['_setAccount','UA-73545432-1'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
             g.src='//www.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
