--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>This site was established in 2014 as a <a href="http://www.git-scm.com/">git</a> repository, but was deprecated shortly after.</p>
                 <h2>This is not a blog!</h2>
                 <p><a href="http://mhandlon.com/">mhandlon.com</a> remains active as a support measure for legacy code, and an educational tool for peers &amp; associates.
-                    Additional documentation, or reference material may be hosted here on my <a href="http://michaelhandlon.com">website</a> or
+                    Additional documentation, or reference material may be hosted here on my <a href="http://michaelhandlon.com">website</a> and
                     <a href="https://github.com/mhandlon">Github</a>.</p>
                 <h2>Move a‘long</h2>
                 <p>There’s really nothing here. Y‘best go back the way you came...</p>
@@ -52,7 +52,6 @@
         <script data-main="js/app" src="js/app/me.js"></script>
         <script data-main="js/app" src="js/vendor/require.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             var _gaq=[['_setAccount','UA-73545432-1'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
