--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>mhandlon.com</title>
+        <meta name="description" content="Michael Handlon, mhandlon">
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -15,7 +15,7 @@
         <!--link rel="stylesheet" href="css/normalize.css"-->
         <!--link rel="stylesheet" href="css/main.css"-->
         <link rel="stylesheet" href="css/mhandlon.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <!--script src="js/vendor/modernizr-2.6.2.min.js"></script-->
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -38,7 +38,7 @@
                 <p>This site was established in 2014 as a <a href="http://www.git-scm.com/">git</a> repository, but was deprecated shortly after.</p>
                 <h2>This is not a blog!</h2>
                 <p><a href="http://mhandlon.com/">mhandlon.com</a> remains active as a support measure for legacy code, and an educational tool for peers &amp; associates.
-                    Additional documentation, or reference material may be hosted here, on my <a href="https    ://michaelhandlon.com">website</a>, and
+                    Additional documentation, or reference material may be hosted here, on my <a href="https://michaelhandlon.com">website</a>, and
                     <a href="https://github.com/mhandlon">Github</a>.</p>
                 <h2>Move a‘long</h2>
                 <p>There’s really nothing here. Y‘best go back the way you came...</p>
