--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>Why are you here?</h2>
                 <p>This site was established in 2014 as a <a href="http://www.git-scm.com/">git</a> repository, but was deprecated shortly after.</p>
                 <h2>This is not a blog!</h2>
-                <p><a href="http://mhandlon.com/">mhandlon.com</a> remains active as a support measure for legacy code, and an educational tool for peers &amp; associates.
+                <p><a href="https://www.mhandlon.com/">mhandlon.com</a> remains active as a support measure for legacy code, and an educational tool for peers &amp; associates.
                     Additional documentation, or reference material may be hosted here, on my <a href="https://michaelhandlon.com">website</a>, and
                     <a href="https://github.com/mhandlon">Github</a>.</p>
                 <h2>Move a‘long</h2>
