--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
         </header>
         <section>
             <div id="me"></div>
-                <div id="desc">
-                    <h2>Hi there,</h2>
-                    <p>My name is Michael Handlon, and I am a Software Engineer at <a
-                            href="https://www.converlogic.com/web/app_dev.php/converlogic/home">Converlogic</a>.</p>
-                    <h2>Why are you here?</h2>
-                    <p>This site was established in 2014 as a <a href="http://www.git-scm.com/">git</a> repository, but was deprecated shortly after.</p>
-                    <h2>This is not a blog!</h2>
-                    <p><a href="https://www.mhandlon.com/">mhandlon.com</a> remains active as a support measure for legacy code, and an educational tool for peers &amp; associates.
-                        Additional documentation, or reference material may be hosted here, on my <a href="https://www.michaelhandlon.com">website</a>, and
-                        <a href="https://github.com/mhandlon">Github</a>.</p>
-                    <h2>Move a‘long</h2>
-                    <p>There’s really nothing here. Y‘best go back the way you came...</p>
-                </div>
+            <div id="desc">
+                <h2>Hi there,</h2>
+                <p>My name is Michael Handlon, and I am a Software Engineer at <a
+                        href="https://www.converlogic.com">Converlogic</a>.</p>
+                <h2>Why are you here?</h2>
+                <p>This site was established in 2014 as a <a href="http://www.git-scm.com/">git</a> repository, but was deprecated shortly after.</p>
+                <h2>This is not a blog!</h2>
+                <p><a href="https://www.mhandlon.com/">mhandlon.com</a> remains active as a support measure for legacy code, and an educational tool for peers &amp; associates.
+                    Additional documentation, or reference material may be hosted here, on my <a href="https://www.michaelhandlon.com">website</a>, and
+                    <a href="https://github.com/mhandlon">Github</a>.</p>
+                <h2>Move a‘long</h2>
+                <p>There’s really nothing here. Y‘best go back the way you came...</p>
+            </div>
             <div class="clear"></div>
         </section>
         <footer>
-            <p>© 2014-2019 mhandlon.com</p>
+            <p>© 2014-2020 mhandlon.com</p>
         </footer>
         <script data-main="js/app" src="js/app/me.js"></script>
         <script data-main="js/app" src="js/vendor/require.js"></script>
