Update professional title and company in profile

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div id="me"></div>
             <div id="desc">
                 <h2>Hi there,</h2>
-                <p>My name is Michael Handlon, and I am a Lead Software Engineer at  <a
-                        href="https://www.coxautoinc.com/">Cox Automotive</a>.</p>
+                <p>My name is Michael Handlon, and I am a Software Engineer at <a
+                        href="https://www.activecampaign.com/">ActiveCampaign</a>.</p>
                 <h2>Why are you here?</h2>
                 <p>This site was established in 2014 as a <a href="http://www.git-scm.com/">git</a> repository, but was deprecated shortly after.</p>
                 <h2>This is not a blog!</h2>
